--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,13 @@
     <li> 
       <strong><%=event.name%></strong>
       in <%= event.location%>:
-      <%= number_to_currency(event.price, precision: 0) %>
+      <%= price(event) %>
     </li>
+    <p>
+      <%= truncate(event.description, length: 35, separator: ' ' )%>
+    </p>
+    <p>
+      <%= day_and_time(event) %>
+    </p>
   <% end %>
 </ul>
