--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
+    <header>
+      <h1>Eventz</h1>
+    </header>
+
     <%= yield %>
+
+    <footer>
+      <p>Made by <a href = '#'>Alex Nestor </a></p>
+    </footer>
   </body>
 </html>
