--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,18 @@
 
   <body>
     <header>
-      <h1>Eventz</h1>
+      <nav>
+        <%= link_to image_tag('logo'), root_path %>
+        <ul>
+          <li>
+            <%= link_to 'All Events', events_path() %>
+          </li>
+        </ul>
+      </nav>
     </header>
-
-    <%= yield %>
-
+    <div class = 'content'>
+      <%= yield %>
+    </div>
     <footer>
       <p>Made by <a href = '#'>Alex Nestor </a></p>
     </footer>
