--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -17,6 +17,6 @@
   <%= f.label :starts_at %>
   <%= f.datetime_select :starts_at, {ampm:true}, {class: 'datetime'} %>
 
-  <%= f.submit "Submit", disable_with: 'Submiting...' %>
+  <%= f.submit "Submit" %>
 
 <% end %>
