--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -13,3 +13,7 @@
       </div>
     </section>
   <% end %>
+
+  <section class = 'admin'>
+    <%= link_to 'Add new event', new_event_path, class: 'button' %>
+  </section>
