--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,21 +10,12 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <%= link_to image_tag('logo'), root_path %>
-        <ul>
-          <li>
-            <%= link_to 'All Events', events_path() %>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <%= render 'layouts/header' %>
+
     <div class = 'content'>
       <%= yield %>
     </div>
-    <footer>
-      <p>Made by <a href = '#'>Alex Nestor </a></p>
-    </footer>
+    
+    <%= render 'layouts/footer' %>
   </body>
 </html>
