--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,5 +1,7 @@
 <%= form_with(model: event, local: true) do |f| %>
 
+  <%= render 'shared/errors', object: event %>
+
   <%= f.label :name %>
   <%= f.text_field :name, autofocus: true %>
 
@@ -14,6 +16,12 @@
 
   <%= f.label :starts_at %>
   <%= f.datetime_select :starts_at, {ampm:true}, {class: 'datetime'} %>
+
+  <%= f.label :capacity %>
+  <%= f.number_field :capacity %>
+
+  <%= f.label :image_file_name %>
+  <%= f.text_field :image_file_name %>
 
   <%= f.submit "Submit" %>
 
