--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,13 @@
 <section class = 'event'>
+  <div class = 'image'>
+    <%= image_tag @event.image_file_name %>
+  </div>
   <div class = 'summary'>
     <h1><%=@event.name%></h1>
-    <h2><%= price(@event) %></h2>
+    <h2>
+      <%= pluralize(@event.capacity, 'spot') %> &bull;
+      <%= price(@event) %>
+    </h2>
     <h3><%= day_and_time(@event) %> in <%= @event.location%></h3>
     <p>
       <%= @event.description %>
