--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -14,8 +14,7 @@
     </p>
 
   <div class = 'register'>
-    <%= link_to "Register!", new_event_registration_path(@event),
-                class: 'register' %>
+    <%= sold_out_or_register?(@event) %>
     <p>
       <%= link_to "Who's registered?", event_registrations_path(@event) %>
     </p>
