--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,9 @@
     </ul>
     <ul class='right'>
       <li>
+        <%= link_to 'Sign in', new_session_path, class: 'button' %>
+      </li>
+      <li>
         <%= link_to 'Sign up', signup_path, class: 'button' %>
       </li>
     </ul>
