--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,14 @@
 <section class = 'event-details'>
   <div class = 'image'>
     <%= image_tag @event.image_file_name %>
+    <% if current_user %>
+      <div class='likes'>
+        <%= like_or_unlike_button(@event, @like) %>
+        <div class='count'>
+          <%= @likers.size %>
+        </div>
+      </div>
+    <% end %>
   </div>
   <div class = 'summary'>
     <h1><%=@event.name%></h1>
@@ -21,6 +29,18 @@
   </div>
 
   </div>
+  <aside>
+    <% if @likers.present? %>
+      <h4>Likes By</h4>
+      <ul>
+        <% @likers.each do |user| %>
+          <li>
+            <%= link_to user.name, user %>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
+  </aside>
 </section>
 
 <% if current_user_admin? %>
