--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,4 @@
 <footer>
-  <p>Made by <a href = '#'>Alex Nestor </a></p>
+  <%= link_to 'Alex Nestor', admin_user_path %>
+  <%# <p>Made by <a href = '#'>Alex Nestor </a></p> %>
 </footer>
